final desgin include responsive

--- a/index.html
+++ b/index.html
@@ -301,6 +301,37 @@
 
       </section>
 
+      <section class="subscription flex-center" id="services">
+        <h2 data-aos="flip-down">
+          Get the latest offers <br>
+          to your inbox
+        </h2>
+        <p data-aos="fade-up">Sign up for the oishi-sushi newsletter</p>
+
+        <div class="subscription__form" data-aos="fade-up">
+          <input type="text" placeholder="enter your email address">
+          <button>Get started</button>
+        </div>
+      </section>
+
+      <footer class="footer flex-between">
+        <h3 class="footer__logo">
+          <span>Oishii</span>Sushi
+        </h3>
+        <ul class="footer__nav">
+          <li><a href="#menu">Menu</a></li>
+          <li><a href="#food">Food</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#about-us">About us</a></li>
+        </ul>
+
+        <ul class="footer__social">
+          <li class="flex-center"><img src="./assets/facebook-icon.jpg" alt="facebook"></li>
+          <li class="flex-center"><img src="/assets/instagram.png" alt="instagram"></li>
+          <li class="flex-center"><img src="/assets/twitter.png" alt="tweet"></li>
+        </ul>
+      </footer>
+
  
 
     
